Dodao POM i 5 testova

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-VALID_USERNAME=tester
-VALID_PASSWORD=testtest123
+BASE_URL=https://www.hamradio.com
+VALID_USERNAME=proba
+VALID_PASSWORD=probaproba
 INVALID_USERNAME=nonexistent
 INVALID_PASSWORD=wrongpass
